[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "l0p4map"
version = "0.2.0"
description = "Professional network monitoring and visualization tool"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "HaxL0p4", email = "haxl0p4@proton.me" }
]
requires-python = ">=3.11"
keywords = ["network", "scanner", "nmap", "security", "visualization", "kali"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "scapy",
    "psutil",
    "requests",
    "PyQt6",
    "PyQt6-WebEngine",
]

[project.urls]
Homepage = "https://github.com/HaxL0p4/L0p4Map"
"Bug Tracker" = "https://github.com/HaxL0p4/L0p4Map/issues"

[project.scripts]
l0p4map = "__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "ui*"]

[tool.setuptools.package-data]
"core" = ["oui.csv"]
"ui" = ["assets/*"]
"ui.assets" = ["*"]
