[package]
name = "ironrdp-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# IronRDP core-tier crates (I/O-free state machines)
ironrdp-pdu = { version = "0.7", features = ["std"] }
ironrdp-connector = "0.8"
ironrdp-svc = "0.6"

# IronRDP session-tier crates (full session with graphics and input)
ironrdp-session = "0.8"
ironrdp-graphics = "0.7"
ironrdp-input = "0.5"

# Serialization for cross-boundary config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
